# mcp-kanban

./: .gitattributes  .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: add-task.md  board.md  fetch-tasks.md  resume-task.md  ui.md
hooks/: hooks.json
src/tasks_mcp/: __init__.py  __main__.py  config.py  resume.py  wiring.py
src/tasks_mcp/domain/: __init__.py  task.py  transitions.py
src/tasks_mcp/mcp/: __init__.py  server.py  tools.py
src/tasks_mcp/services/: __init__.py  errors.py  task_service.py
src/tasks_mcp/storage/: __init__.py  errors.py  repository.py  sqlite_repository.py
src/tasks_mcp/storage/migrations/: 001_initial.sql  002_add_link.sql  __init__.py  runner.py
src/tasks_mcp/web/: __init__.py  __main__.py  autostart.py  server.py
src/tasks_mcp/web/static/: index.html
tests/: test_config.py  test_mcp_server.py  test_sqlite_repository.py  test_task_service.py  test_transitions.py  test_web_autostart.py  test_web_server.py
