[project]
name = "tasks-mcp"
version = "0.1.0"
description = "Personal four-stage kanban board as a local MCP server, backed by SQLite."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=3,<4",
]

[project.scripts]
tasks-mcp = "tasks_mcp.mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tasks_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
